--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
         display: flex;
         align-items: center;
         justify-content: center;
-        height: 60vh;
+        height: 110vh;
+        margin top 10px;
         flex-direction: column; /* Make buttons appear vertically */
         gap: 50px; /* Add some space between buttons */
     }
