--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         align-items: center;
         justify-content: center;
         height: 110vh;
-        margin top 10px;
+        margin-top: 10px;
         flex-direction: column; /* Make buttons appear vertically */
         gap: 50px; /* Add some space between buttons */
     }
