--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
         align-items: center;
         justify-content: center;
         height: 110vh;
-        margin-top: 10px;
+        margin-top: 15px;
+        margin-bottom: 15px;
         flex-direction: column; /* Make buttons appear vertically */
         gap: 50px; /* Add some space between buttons */
     }
