--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Shabrouqa</title>
+<title>MShabrouqa</title>
 
 </head>
     
@@ -20,14 +20,14 @@
    <h2>ESP Web Server</h2>
   
 <div class="grid-container">
-    <button type="button" class="btn btn-primary btn-custom" onclick="hitWebsite('https://sgp1.blynk.cloud/external/api/update?token=oFx_9fHxjhrxWbEpmAhzy3fTSquschga&v1=1', this)">LED 1</button>
-    <button type="button" class="btn btn-primary btn-custom" onclick="hitWebsite('https://sgp1.blynk.cloud/external/api/update?token=oFx_9fHxjhrxWbEpmAhzy3fTSquschga&v1=2', this)">LED 2</button>
-    <button type="button" class="btn btn-primary btn-custom" onclick="hitWebsite('https://sgp1.blynk.cloud/external/api/update?token=oFx_9fHxjhrxWbEpmAhzy3fTSquschga&v1=3', this)">LED 3</button>
-    <button type="button" class="btn btn-primary btn-custom" onclick="hitWebsite('https://sgp1.blynk.cloud/external/api/update?token=oFx_9fHxjhrxWbEpmAhzy3fTSquschga&v1=4', this)">LED 4</button>
-    <button type="button" class="btn btn-primary btn-custom" onclick="hitWebsite('https://sgp1.blynk.cloud/external/api/update?token=oFx_9fHxjhrxWbEpmAhzy3fTSquschga&v1=5', this)">LED 5</button>
-    <button type="button" class="btn btn-primary btn-custom" onclick="hitWebsite('https://sgp1.blynk.cloud/external/api/update?token=oFx_9fHxjhrxWbEpmAhzy3fTSquschga&v1=6', this)">LED 6</button>
-    <button type="button" class="btn btn-primary btn-custom" onclick="hitWebsite('https://sgp1.blynk.cloud/external/api/update?token=oFx_9fHxjhrxWbEpmAhzy3fTSquschga&v1=7', this)">LED 7</button>
-    <button type="button" class="btn btn-primary btn-custom" onclick="hitWebsite('https://sgp1.blynk.cloud/external/api/update?token=oFx_9fHxjhrxWbEpmAhzy3fTSquschga&v1=8', this)">LED 8</button>
+    <button type="button" class="btn btn-primary btn-custom" onclick="hitWebsite('https://sgp1.blynk.cloud/external/api/update?token=VGI_2azDKrnKH1ldDbjopVQ2D2L3Udx8&v1=1', this)">LED 1</button>
+    <button type="button" class="btn btn-primary btn-custom" onclick="hitWebsite('https://sgp1.blynk.cloud/external/api/update?token=VGI_2azDKrnKH1ldDbjopVQ2D2L3Udx8&v1=2', this)">LED 2</button>
+    <button type="button" class="btn btn-primary btn-custom" onclick="hitWebsite('https://sgp1.blynk.cloud/external/api/update?token=VGI_2azDKrnKH1ldDbjopVQ2D2L3Udx8&v1=3', this)">LED 3</button>
+    <button type="button" class="btn btn-primary btn-custom" onclick="hitWebsite('https://sgp1.blynk.cloud/external/api/update?token=VGI_2azDKrnKH1ldDbjopVQ2D2L3Udx8&v1=4', this)">LED 4</button>
+    <button type="button" class="btn btn-primary btn-custom" onclick="hitWebsite('https://sgp1.blynk.cloud/external/api/update?token=VGI_2azDKrnKH1ldDbjopVQ2D2L3Udx8&v1=5', this)">LED 5</button>
+    <button type="button" class="btn btn-primary btn-custom" onclick="hitWebsite('https://sgp1.blynk.cloud/external/api/update?token=VGI_2azDKrnKH1ldDbjopVQ2D2L3Udx8&v1=6', this)">LED 6</button>
+    <button type="button" class="btn btn-primary btn-custom" onclick="hitWebsite('https://sgp1.blynk.cloud/external/api/update?token=VGI_2azDKrnKH1ldDbjopVQ2D2L3Udx8&v1=7', this)">LED 7</button>
+    <button type="button" class="btn btn-primary btn-custom" onclick="hitWebsite('https://sgp1.blynk.cloud/external/api/update?token=VGI_2azDKrnKH1ldDbjopVQ2D2L3Udx8&v1=8', this)">LED 8</button>
 </div></div></div>
 
 <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
