--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>ESP Web Server</title>
+<title>MShabrouqa Server</title>
 <style>
     body {
         text-align: center;
@@ -11,7 +11,7 @@
 
     .led-container {
         display: grid;
-        grid-template-columns: repeat(3, 1fr);
+        grid-template-columns: repeat(4, 1fr);
         gap: 10px;
         justify-content: center;
     }
