--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     .led-container {
         display: grid;
-        grid-template-columns: repeat(4, 1fr);
+        grid-template-columns: repeat(3, 1fr); /* Three columns */
         gap: 10px;
         justify-content: center;
     }
@@ -19,8 +19,8 @@
     .led-button {
         color: white;
         font-weight: bold;
-        width: 100px; /* Fixed width */
-        height: 50px; /* Fixed height */
+        /*width: 100px; /* Fixed width */
+        /*height: 50px; /* Fixed height */
         padding: 10px;
         box-sizing: border-box;
     }
