--- a/index.html
+++ b/index.html
@@ -97,6 +97,14 @@ function updateValue(value) {
         <button id="led6" class="led-button" onclick="updateValue(6)">LED 6</button>
         <button id="led7" class="led-button" onclick="updateValue(7)">LED 7</button>
         <button id="led8" class="led-button" onclick="updateValue(8)">LED 8</button>
+        <button id="led9" class="led-button" onclick="updateValue(9)">LED 9</button>
+        <button id="led10" class="led-button" onclick="updateValue(10)">LED 10</button>
+        <button id="led11" class="led-button" onclick="updateValue(11)">LED 11</button>
+        <button id="led12" class="led-button" onclick="updateValue(12)">LED 12</button>
+        <button id="led13" class="led-button" onclick="updateValue(13)">LED 13</button>
+        <button id="led14" class="led-button" onclick="updateValue(14)">LED 14</button>
+        <button id="led15" class="led-button" onclick="updateValue(15)">LED 15</button>
+        <button id="led16" class="led-button" onclick="updateValue(16)">LED 16</button>
     </div>
     <p id="value"></p>
     <!-- Call checkLink function every 100 milliseconds -->
