--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     }
 
     .led-container {
+        max-width: 400px; /* Set max-width to 400px */
+        margin: 0 auto; /* Center the container */
         display: grid;
         grid-template-columns: repeat(3, 1fr); /* Three columns */
         gap: 25px;
@@ -22,6 +24,7 @@
         padding: 15px;
         box-sizing: border-box;
         display: none; /* Initially hide all buttons */
+        max-width: 400px; /* Set max-width to 400px */
     }
 
     #value {
