--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@ window.onload = function() {
     <!-- Input for dynamic token -->
     <div>
         <br><br>
-        <input type="text" id="tokenInput" placeholder="Enter Token">
+        <input type="text" id="tokenInput" placeholder="Enter Token" maxlength="32" >
         <button onclick="setToken()">Set Token</button>
         <br>
         <label><input type="checkbox" id="rememberCheckbox"> Remember Token</label>
