--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     }
 
     .led-container {
-        max-width: 400px; /* Set max-width to 400px */
+        max-width: auto; /* Set max-width to 400px */
         margin: 0 auto; /* Center the container */
         display: grid;
         grid-template-columns: repeat(3, 1fr); /* Three columns */
