--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     .led-container {
         max-width: 500px; /* Set max-width to 400px */
-        margin: 0 auto; /* Center the container */
+        margin: auto auto; /* Center the container */
         display: grid;
         grid-template-columns: repeat(3, 1fr); /* Three columns */
         gap: 25px;
@@ -24,7 +24,7 @@
         padding: 15px;
         box-sizing: border-box;
         display: none; /* Initially hide all buttons */
-        max-width: 400px; /* Set max-width to 400px */
+        max-width: 500px; /* Set max-width to 400px */
     }
 
     #value {
