--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     }
 
     .led-container {
-        max-width: 500px; /* Set max-width to 400px */
+        max-width: auto; /* Set max-width to 400px */
         margin: auto auto; /* Center the container */
         display: grid;
         grid-template-columns: repeat(3, 1fr); /* Three columns */
@@ -21,10 +21,10 @@
     .led-button {
         color: white;
         font-weight: bold;
-        padding: 15px;
+        padding: 17px;
         box-sizing: border-box;
         display: none; /* Initially hide all buttons */
-        max-width: 500px; /* Set max-width to 400px */
+        max-width: auto; /* Set max-width to 400px */
     }
 
     #value {
