--- a/index.html
+++ b/index.html
@@ -412,7 +412,11 @@ function setToken() {
     // Add event listener to the button
     changeStyleButton.addEventListener('click', toggleGridStyle);
 });
-        
+        fetchDataAndExtractVariables();
+        fetchDataAndExtractVariables2();
+        checkLink();
+        displayValue();
+        checkArraySize();
         // Call the function at regular intervals
         setInterval(fetchDataAndExtractVariables, 100000);
         setInterval(fetchDataAndExtractVariables2, 100000);
