added check value

--- a/index.html
+++ b/index.html
@@ -101,9 +101,9 @@ function hitWebsite(url, buttonId) {
     xhr.onreadystatechange = function () {
         if (xhr.readyState === 4) {
             button.disabled = false;
-	fetchDataAndExtractVariables();
+   	fetchDataAndExtractVariables();
         fetchDataAndExtractVariables2();
-   
+	displayValue();
         }
     };
     xhr.send();
