--- a/index.html
+++ b/index.html
@@ -379,6 +379,7 @@ function setToken() {
     	checkArraySize();
 })();
 
+setInterval(checkLink, 10000);
 setInterval(displayValue, 150);
 
 </script>
