--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ function checkLink() {
                     document.getElementById("result").innerText = "Device is not connected.";
                 }
             } else {
-                document.getElementById("result").innerText = "Error: Unable to connect to the device.";
+                document.getElementById("result").innerText = "Please set token";
             }
         }
     };
