--- a/index.html
+++ b/index.html
@@ -339,8 +339,8 @@ function toggleGridStyle() {
     	checkArraySize();
 })();
 
-
-setInterval(displayValue, 250);
+setInterval(checkLink, 10000);
+setInterval(displayValue, 150);
 
 </script>
 </head>
