--- a/index.html
+++ b/index.html
@@ -71,17 +71,17 @@ function updateValue(value, buttonId) {
 function hitWebsite(url, buttonId) {
     var button = document.getElementById(buttonId);
     button.innerText = "Loading...";
+    button.style.backgroundColor = "grey";
     button.disabled = true;
-    
     var xhr = new XMLHttpRequest();
     xhr.open("GET", url, true);
     xhr.onreadystatechange = function () {
         if (xhr.readyState === 4) {
             button.disabled = false;}};
     xhr.send();
-	checkLink();
+    checkLink();
     checkArraySize();
-	fetchDataAndExtractVariables();
+    fetchDataAndExtractVariables();
     fetchDataAndExtractVariables2();  }
 
 function checkArraySize() {
