--- a/index.html
+++ b/index.html
@@ -82,8 +82,10 @@ function displayValue() {
                     var buttonId = "led" + (i + 1);
                     var button = document.getElementById(buttonId);
     var lastGridStyle = localStorage.getItem('gridStyle');
-    if (lastGridStyle === 'grid1') {button.style.backgroundColor = "grey";}  
-                    else  {
+    if (lastGridStyle === 'grid1') {button.style.backgroundColor = "grey";
+    button.style.padding= "30px";
+    }  
+                    else  { button.style.padding= "17px";
                     if (digit === "0") {
                         button.style.backgroundColor = "green";} 
                         else if (digit === "1") {
