--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ function hitWebsite(value,buttonId) {
         if (xhr.readyState === 4) {
         button.disabled = false;
         
-        refresh(value);
+       // refresh(value);
                
             var lastGridStyle = localStorage.getItem('gridStyle');
     if (lastGridStyle === 'grid1') {button.style.backgroundColor = "RoyalBlue";}
