--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <title>ESP Web Server</title>
 <style>
     body { text-align: center; }
-    .led-container { max-width: 300px; display: grid; margin: auto; grid-template-columns: repeat(3, 1fr); gap: 25px; justify-content: center; }
+    .led-container { max-width: auto; display: grid; margin: auto; grid-template-columns: repeat(3, 1fr); gap: 25px; justify-content: center; }
     .led-button { color: white; font-weight: bold; white-space: normal; font-size: 17px; word-wrap:anywhere; padding: 17px; box-sizing: border-box; display: none; max-width: auto; background-color: green; border-radius: 0px;}
     #value { display: none; }.
 </style>
