--- a/set.html
+++ b/set.html
@@ -21,7 +21,7 @@
     }
 
     // If the 'lastGridStyle' exists in the URL, store it in localStorage
-    if (lastGridStyle) {
+    if (gridStyle) {
       localStorage.setItem('gridStyle', gridStyle);
       console.log('Last grid style set in localStorage:', gridStyle);
     } else {
