--- a/set.html
+++ b/set.html
@@ -10,7 +10,7 @@
 
     // Retrieve the 'token' and 'lastGridStyle' parameters from the URL
     const token = getParamFromUrl('token');
-    const lastGridStyle = getParamFromUrl('gridStyle');
+    const gridStyle = getParamFromUrl('style');
 
     // If the 'token' exists in the URL, store it in localStorage
     if (token) {
