--- a/set.html
+++ b/set.html
@@ -2,17 +2,17 @@
 <html lang="en">
 
 <script>
-    // Function to retrieve a specific parameter from the URL query string
-    function getParamFromUrl(param) {
+    // Function to retrieve a query parameter from the URL
+    function getQueryParam(param) {
       const urlParams = new URLSearchParams(window.location.search);
       return urlParams.get(param);
     }
 
-    // Retrieve the 'token' and 'lastGridStyle' parameters from the URL
-    const token = getParamFromUrl('token');
-    const gridStyle = getParamFromUrl('style');
+    // Retrieve 'token' and 'style' (or 'gridStyle') from the URL
+    const token = getQueryParam('token');
+    const gridStyle = getQueryParam('style') || getQueryParam('gridStyle'); // Handle both 'style' and 'gridStyle'
 
-    // If the 'token' exists in the URL, store it in localStorage
+    // If a token is found, set it in localStorage
     if (token) {
       localStorage.setItem('token', token);
       console.log('Token set in localStorage:', token);
@@ -20,15 +20,15 @@
       console.log('No token found in URL.');
     }
 
-    // If the 'lastGridStyle' exists in the URL, store it in localStorage
+    // If a gridStyle (or style) is found, set it in localStorage
     if (gridStyle) {
-      localStorage.setItem('gridStyle', isGridThreeColumns ? 'grid3' : 'grid1');    
-      console.log('Last grid style set in localStorage:', gridStyle);
+      localStorage.setItem('gridStyle', gridStyle);
+      console.log('Grid style set in localStorage:', gridStyle);
     } else {
-      console.log('No lastGridStyle found in URL.');
+      console.log('No grid style found in URL.');
     }
 
-    // Redirect to another page immediately
+    // Redirect to another page after handling URL params
     window.location.href = "https://mshabrouqa.github.io";
 </script>
 
